--- a/src/app/temperature-gauge/temperature-gauge.component.scss
+++ b/src/app/temperature-gauge/temperature-gauge.component.scss
@@ -1,9 +1,13 @@
-h1 {
+.header {
   text-align: center;
   color: #ffffff;
   background-color: #3CB371;
   margin: 0;
-  padding: 20px;
+  padding: 20px 0px;
+
+  h1, h2 {
+    margin: 0;
+  }
 
   &.alert {
     background-color: #b71c1c;
@@ -17,10 +21,11 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 342px;
-  height: 620px;
+  height: 648px;
 }
 
 .temp-gauge {
   display: flex;
-  padding: 20px;
+  padding: 20px 0px;
+  background-color: #fff;
 }
