--- a/src/app/temperature-gauge/temperature-gauge.component.html
+++ b/src/app/temperature-gauge/temperature-gauge.component.html
@@ -1,19 +1,22 @@
-<h1 [ngClass]="{'alert': (hiTemp | async)}">Current Temp: {{ currentTempDisplay }}</h1>
-<div class="temp-gauge">
-  <ngx-charts-bar-vertical
-    [view]="view"
-    [scheme]="colorScheme"
-    [results]="currentTemp"
-    [gradient]="gradient"
-    [xAxis]="showXAxis"
-    [yAxis]="showYAxis"
-    [legend]="showLegend"
-    [animations]="true"
-    [showXAxisLabel]="showXAxisLabel"
-    [showYAxisLabel]="showYAxisLabel"
-    [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel"
-    [yScaleMax]="getScaleMax()"
-    [yScaleMin]="getScaleMin()">
-  </ngx-charts-bar-vertical>
-</div>
+<div [ngClass]="{'alert': (hiTemp | async)}" class="header">
+    <h1>Current Temp</h1>
+    <h2>{{ currentTempDisplay }} {{ unitToDisplay }}</h2>
+  </div>
+  <div class="temp-gauge">
+    <ngx-charts-bar-vertical
+      [view]="view"
+      [scheme]="colorScheme"
+      [results]="currentTemp"
+      [gradient]="gradient"
+      [xAxis]="showXAxis"
+      [yAxis]="showYAxis"
+      [legend]="showLegend"
+      [animations]="true"
+      [showXAxisLabel]="showXAxisLabel"
+      [showYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel"
+      [yScaleMax]="getScaleMax()"
+      [yScaleMin]="getScaleMin()">
+    </ngx-charts-bar-vertical>
+  </div>
